--- a/website/syllabus.qmd
+++ b/website/syllabus.qmd
@@ -107,15 +107,15 @@ After every group project, every student is expected to peer-review the written 
 The primary purpose of this peer review is to *practice* providing constructive feedback on both technical and non-technical writing to your fellow data scientists.
 Peer reviews will be completed on Canvas and a structured evaluation rubric will be provided for each assignment. 
 The peer review process will be single-blinded so teams will not know the identities of their reviewers.
-Students can earn a total of 10 points for each peer review by (i) completing the provided rubric and (ii) leaving a constructive comment that identities strengths and areas for potential improvement.
+Students can earn a total of 20 points for each peer review by (i) completing the provided rubric and (ii) leaving a constructive comment that identities strengths and areas for potential improvement.
 Peer reviews are due one week after the project assignment due dates; that is, they are due on October 17, November 14, and December 12.
 A penalty will be assessed for submitting late reviews.
 
 ### Team Accountability Survey {#sec-team-accountability}
 
 After each project submission, you will fill out a team accountability survey.
-You can earn up to 20 points per project submission: 10 for completing the survey and 10 based on the feedback from their teammates and their own self-assessment. 
-In total, students can earn up to 60 points based on their level of participation in their project groups.
+You can earn up to 40 points per project submission: 10 for completing the survey and 10 based on the feedback from their teammates and their own self-assessment. 
+In total, students can earn up to 120 points based on their level of participation in their project groups.
 
 ### Participation {#sec-participation}
 An additional 100 points will be awarded based on participation during class, office hours, and online discussions on Piazza.
@@ -168,11 +168,27 @@ You **may not** post, share, or upload any course material, including lecture sl
 
 ## Policy on the Use of Generative Artificial Intelligence Models {#sec-ai}
 
-While the Statistics Department recognizes the potential benefits of AI, its use in academic work can be problematic. In this course, three rules regarding the use of ChatGPT and other generative AI models will be enforced: 
+You have the right to the full benefits of my expertise and engagement in this course.
+So, I will **never** use AI to
+  - Provide feedback on assignments
+  - Prepare any course content (e.g., slides, code, assignments, etc.)
+  - Mediate or assist communications with you
+In other words, everything you see in this course was created by me without the aid of generative AI.
+
+While the Statistics Department recognizes the potential benefits of AI, its use in academic work can be problematic. 
+Insofar as this course is really about process and not final results, I believe strongly that the use of generative AI is at odds with the learning goals.
+So, three rules regarding the use of ChatGPT and other generative AI models will be enforced: 
 
   * Passing off AI-generated responses as original student work constitutes plagiarism and is strictly prohibited. Any students found to be engaging in this practice will be cited for academic misconduct.
   * Unless explicitly authorized by the instructor to do so, any use of AI-generated responses as sources of information, even with documentation and attribution, is prohibited.
   * You may not, under any circumstances, upload any course material to a generative AI model or agent. This includes lecture slides and notes and reports or videos uploaded by other student groups.
+
+:::{.callout-important}
+# Peer Review
+Respect your classmates enough to review their projects yourself.
+Uploading someone else's project report or presentation to a generative AI tool (e.g., for creating summaries) is forbidden and **will result in a failing grade.** 
+:::
+  
 
 ## Additional Information
 
